pkl-core/src/test/files/LanguageSnippetTests/input/errors/abstractMethodInNonAbstractClass.pkl
class Foo {
  abstract function bar(): Int
}

res = new Foo {}
